# CarAudioSteering

./: .gitignore  CarAudioRemoteScanner.ino  CarAudioSteering.ino  README.md  config.h  send_command.cpp  send_command.h
Arduino/: CarAudioSteering.ino
HostApp/: CMakeLists.txt  main.cpp  maindialog.cpp  maindialog.h  maindialog.ui
STM32Cube/: .mxproject  STM32Cube.gpdsc  STM32Cube.ioc  platformio.ini
STM32Cube/Inc/: btinput.h  commands.h  config.h  flashstorage.h  i2c.h  main.h  statemachine.h  stm32f0xx_it.h
STM32Cube/Src/: ad5272.c  ad5272.h  adc.c  commands.c  flashstorage.c  gpio.c  i2c.c  main.c  statemachine.c  stm32f0xx_it.c  usart.c
STM32Cube/doc/: protocol.md
STM32Cube/hardware/CarAudioSteering/: CarAudioSteering-cache.bck  CarAudioSteering-cache.lib  CarAudioSteering.kicad_pcb  CarAudioSteering.kicad_pcb-bak  CarAudioSteering.pro  CarAudioSteering.sch  CarAudioSteering.sch-bak  sym-lib-table
STM32Cube/lib/RTT/: SEGGER_RTT_Conf.h
STM32Cube/src/: ad5272.c  ad5272.h  adc.c  commands.c  dma.c  gpio.c  i2c.c  main.c  statemachine.c  usart.c
